# ContextGate

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/audit/: audit.py
app/core/: access_control.py  embeddings.py  llm_provider.py  prompt_builder.py  retrieval.py  sensitivity.py  vector_store.py
app/data/: sample_docs.json  users.json
app/models/: schemas.py
docs/: README.md  access-control.md  adversarial-testing.md  architecture.md  audit-log.md  extending.md  sensitivity-filters.md  threat-model.md
scripts/: ingest.py
tests/: conftest.py  test_access_control.py  test_adversarial.py  test_eval.py  test_sensitivity.py
